--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # Ignore prototyping dir
 /tmp
 # Ignore anki repo clone
-#/anki/
+/anki/
 # Ignore test db and files when running in dev folder
 auth.db
 session.db
