--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -240,18 +240,24 @@ jobs:
       # clone and patch anki library  
       - name: Clone patch Anki
         run: sh ./scripts/clone_patch_anki
-        
+
       - name: Install Protoc
-        run: |
-          PB_REL="https://github.com/protocolbuffers/protobuf/releases"
-          curl -LO $PB_REL/download/v3.15.8/protoc-3.15.8-linux-x86_64.zip
-          mkdir -p $HOME/protoc
-          unzip protoc-3.15.8-linux-x86_64.zip -d $HOME/protoc
-          
+        uses: arduino/setup-protoc@v1
+        with:
+          version: '3.x'
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
+      # - name: Install Protoc
+      #   run: |
+      #     PB_REL="https://github.com/protocolbuffers/protobuf/releases"
+      #     curl -LO $PB_REL/download/v3.15.8/protoc-3.15.8-linux-x86_64.zip
+      #     mkdir -p $HOME/protoc
+      #     unzip protoc-3.15.8-linux-x86_64.zip -d $HOME/protoc
+          # export PATH="$PATH:$HOME/protoc/bin"
 
       - name: Build
         run: |
-          export PATH="$PATH:$HOME/protoc/bin"
+          
           cargo build --release --features tls
 
       - name: Strip binaries (ankisyncd)
@@ -291,10 +297,16 @@ jobs:
       # clone and patch anki library  
       - name: Clone patch Anki
         run: sh ./scripts/clone_patch_anki
-      - name: Install protoc
-        run: |
-          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-          brew install protobuf
+        
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v1
+        with:
+          version: '3.x'
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Install protoc
+      #   run: |
+      #     /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+      #     brew install protobuf
       - name: Build
         uses: actions-rs/cargo@v1
         with:
